--- a/k8s/bootstrap/talos/talconfig.yaml
+++ b/k8s/bootstrap/talos/talconfig.yaml
@@ -29,17 +29,25 @@ nodes:
     networkInterfaces:
       - deviceSelector:
           hardwareAddr: "b8:85:84:a2:5d:97"
-        dhcp: false
-        addresses:
-          - "192.168.68.11/24"
-        routes:
-          - network: 0.0.0.0/0
-            gateway: "192.168.68.1"
-        mtu: 1500
+        dhcp: true
+        # dhcp: false
+        # addresses:
+        #   - "192.168.68.11/24"
+        # routes:
+        #   - network: 0.0.0.0/0
+        #             #     gateway: "192.168.68.1"
+        #             mtu: 1500
         vip:
           ip: "192.168.68.200"
 
 # Global patches
 patches:
+  - # Force nameserver
+    |-
+    machine:
+      network:
+        nameservers:
+          - 1.1.1.1
+          - 192.168.68.1
 
 
