--- a/k8s/flux/vars/cluster-secrets.sops.yaml
+++ b/k8s/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:x5HyWUYIoHdht+k=,iv:bdomCoYXEiMeYe3aK20E00Z9ebtHadoo2MKEWrwvjwc=,tag:ogKM1tet1EqhevQlOZgzgw==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:1kObmxo4fAm4fhJa0K3kKlgZpFczRjvA,iv:MUXw1xoxPsrpkJ1IM4W4jKZL9a7K66RfLtd0oK6rUUU=,tag:EZcwEiEO4ITMzdtHoS9ObA==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:jGtMGNJdtgsbZ21/Ri1Kdka+le2yuVW1VuBzwIp6z1FN4Npp,iv:sZu5c+iOo9WRfQCquY+mv1d2iKnQFK7aNAh+u9OIdGA=,tag:fUwYnPkdX/lHCV9G8vTHYQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:CIJUwr8ggZj6P/E=,iv:BhGTZA++cJmF4SwdIQuZOXnE0tFDSeeSuzRmbCzd+/k=,tag:IqdhGConlMD0VxYIGrTsdw==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:jPLknHic+5q15Hqw4zKqb7qpcswOhdFn,iv:+R9PG9oeL3ZrD4OBI0QlTiQiHBvLH6yCXyDQfK64A6o=,tag:U3TcDDJQ7p2v1FKVh/dgYA==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:Uvj2TB/Yz2qUvN/bsf15kY9odEMmjG+nx+qQKypXiTwRArnc,iv:HQ2RtOJQE8ppWpzSZ4G+irsEpCj8djilCqEv7RIBu2k=,tag:1z8/tmm0co7wPhCozf3Blg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1yq7xwc03yg7gp2ew9k3jehrz6ctlmuwsffypwvskvl27e26frqmqa5d7de
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLL1RBK2lCREs2Z1JOa0ZH
-            MC91U3d5K1dJNGYxTUJ5czZHeUcrNEM0eTFNCmxiSXFVZzAwMCtiRnhPeEZ1Y2FO
-            K1ovWXAzTEgyakpVSzBwbFo2VXdTSVEKLS0tIGYzL0tFTG5QQVp2eTk0eVdtTk5x
-            dSs0TkR1R3doRmJGdFBOMStXck84Z2sKoGCU865sDbXsneawpCrPM/ziJYfII1Kn
-            y1j55QzG+KLaLZz8uidDuSkXnrn9MuW5m+SPSJ+RgbcK4sUH/Wsm4A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTMjMvSmloUjJ2UDhYOXFF
+            bFhrL0o3RlRjRUw3SFhQWE1reUtOck5lTkU4CmtiV3ZlZ1hIdzVFMFRzNzFVcVor
+            ZUM3MERpYW1raGJ0bkZnbCtmeXZpRzgKLS0tIHFTc0g2R1ZyWmZQSEs4WmpRazhL
+            cW9qSUNxbmpzUWFwcVhpTmQ5d2J4VTAKFm+iemdgkq9GYuYCj/w5vGB1DhD4Lu6Y
+            4ZL2csObreySGyCKZ6lrf6DL4sFnLd97vM3Wb6VncWBY61k2qnnIAg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-07T16:33:09Z"
-    mac: ENC[AES256_GCM,data:gKEgqIoorIWjPtBgmRW1Yl5WTp8X2gTEcAX8sqLNwBL7E7mq9XLqT3VUGplJtdJINiRg2rLDVw5fgkUH/q5qfxwouolx1dZwXweEcuzNCv3gMFtkx+Q7o8u7yAtmAkH9Wk5KFggSehV93S8SDtgYMgdOVKrn2j3jqms+kN0Xm20=,iv:ZrNr564nbq3Qu79HTXzqV/FzKJlzkBnyUi3YHp3ugIQ=,tag:rHXEzAv5C1xOSPdCRI39Eg==,type:str]
+    lastmodified: "2024-10-07T17:55:35Z"
+    mac: ENC[AES256_GCM,data:PcBUlNEKYAOWek8OkQCwkbpSjQJG2Tq7TiDKKs868wIT+Mi/kypJyWKD3ND5mLoG3jVpUeqRm2+KrJIiIScUhozUr9/h1OWJ1tjqVaegSu2CNS57l5CsxUUDoWHtCuZJH88hvEZcvfFYAZGT9mEvr0y5m2P+jgRs+GWFHCUpDFM=,iv:TtQdYdSFVaq9SsxVCpkoE40Us7wGonEo1/d1e2UfVw0=,tag:n+cS7nZ6mqfknejrUledZg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
