--- a/k8s/apps/openebs-system/openebs/app/helmrelease.yaml
+++ b/k8s/apps/openebs-system/openebs/app/helmrelease.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -30,6 +29,19 @@ spec:
       replicated:
         mayastor:
           enabled: false
+    mayastor:
+      io_engine:
+        # reduce from default of 2
+        cpuCount: "1"
+      etcd:
+        # podAntiAffinityPreset is set to "hard" by default, causing crashes on
+        # clusters with < 3 nodes. Setting to none, sets it to "soft" allowing
+        # pods to be scheduled on one node
+        podAntiAffinityPreset: ""
+      csi:
+        node:
+          initContainers:
+            enabled: false
     openebs-crds:
       csi:
         volumeSnapshots:
