--- a/k8s/bootstrap/talos/talconfig.yaml
+++ b/k8s/bootstrap/talos/talconfig.yaml
@@ -1,10 +1,8 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/budimanjojo/talhelper/master/pkg/config/schemas/talconfig.json
----
 # renovate: datasource=docker depName=ghcr.io/siderolabs/installer
 talosVersion: v1.8.0
 # renovate: datasource=docker depName=ghcr.io/siderolabs/kubelet
 kubernetesVersion: v1.31.1
-
 clusterName: "homelab"
 endpoint: https://192.168.68.200:6443
 clusterPodNets:
@@ -15,11 +13,9 @@ additionalApiServerCertSans: &sans
   - "192.168.68.200"
   - 127.0.0.1 # KubePrism
 additionalMachineCertSans: *sans
-
 # Disable built-in Flannel to use Cilium
 cniConfig:
   name: none
-
 nodes:
   - hostname: "n1"
     ipAddress: "192.168.68.11"
@@ -29,25 +25,35 @@ nodes:
     networkInterfaces:
       - deviceSelector:
           hardwareAddr: "b8:85:84:a2:5d:97"
-        dhcp: true
-        # dhcp: false
-        # addresses:
-        #   - "192.168.68.11/24"
-        # routes:
-        #   - network: 0.0.0.0/0
-        #             #     gateway: "192.168.68.1"
-        #             mtu: 1500
+        dhcp: false
+        addresses:
+          - "192.168.68.11/24"
+        routes:
+          - network: 0.0.0.0/0
+            gateway: "192.168.68.1"
+        mtu: 1500
         vip:
           ip: "192.168.68.200"
-
 # Global patches
 patches:
-  - # Force nameserver
-    |-
+  # Force nameserver
+  - |-
     machine:
       network:
         nameservers:
           - 1.1.1.1
           - 192.168.68.1
-
-
+  - "@./patches/global/cluster-discovery.yaml"
+  - "@./patches/global/containerd.yaml"
+  - "@./patches/global/disable-search-domain.yaml"
+  - "@./patches/global/hostdns.yaml"
+  - "@./patches/global/kubelet.yaml"
+  - "@./patches/global/openebs-local.yaml"
+  - "@./patches/global/sysctl.yaml"
+# Controller patches
+controlPlane:
+  patches:
+    - "@./patches/controller/api-access.yaml"
+    - "@./patches/controller/cluster.yaml"
+    - "@./patches/controller/disable-admission-controller.yaml"
+    - "@./patches/controller/etcd.yaml"
