--- a/k8s/flux/vars/cluster-secrets.sops.yaml
+++ b/k8s/flux/vars/cluster-secrets.sops.yaml
@@ -1,29 +1,29 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: cluster-secrets
-    namespace: flux-system
+  name: cluster-secrets
+  namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:CIJUwr8ggZj6P/E=,iv:BhGTZA++cJmF4SwdIQuZOXnE0tFDSeeSuzRmbCzd+/k=,tag:IqdhGConlMD0VxYIGrTsdw==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:jPLknHic+5q15Hqw4zKqb7qpcswOhdFn,iv:+R9PG9oeL3ZrD4OBI0QlTiQiHBvLH6yCXyDQfK64A6o=,tag:U3TcDDJQ7p2v1FKVh/dgYA==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:Uvj2TB/Yz2qUvN/bsf15kY9odEMmjG+nx+qQKypXiTwRArnc,iv:HQ2RtOJQE8ppWpzSZ4G+irsEpCj8djilCqEv7RIBu2k=,tag:1z8/tmm0co7wPhCozf3Blg==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:FBQy0CtfqoIR0L4=,iv:x6Qb7XUpR0gVR5pWIZk/Q9/i5AWQJ8+YmgTvwVEOEWM=,tag:MKQEv6KPVAcApOLxbKhWXw==,type:str]
+  SECRET_ACME_EMAIL: ENC[AES256_GCM,data:BfRaglbUICv8o+ppGaM+LdeQZa/28nuC,iv:NmAiD4PnNz9lx5JQ+YLwRMYDO9x/WAxwydQX3w1QOWU=,tag:XQeUtTRiz3qCXyZW9b6N4Q==,type:str]
+  SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:+xFym3zkV76wtFoJADTKCSdPpx06O060vhTKAGyrNzjj+kVF,iv:MY8KdYTzbPgOtjHUsnVOFVY/sqxI42khyWUbB2SCfgc=,tag:QENiSY7SbexIR5GNhri7+g==,type:str]
 sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
-    age:
-        - recipient: age1yq7xwc03yg7gp2ew9k3jehrz6ctlmuwsffypwvskvl27e26frqmqa5d7de
-          enc: |
-            -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTMjMvSmloUjJ2UDhYOXFF
-            bFhrL0o3RlRjRUw3SFhQWE1reUtOck5lTkU4CmtiV3ZlZ1hIdzVFMFRzNzFVcVor
-            ZUM3MERpYW1raGJ0bkZnbCtmeXZpRzgKLS0tIHFTc0g2R1ZyWmZQSEs4WmpRazhL
-            cW9qSUNxbmpzUWFwcVhpTmQ5d2J4VTAKFm+iemdgkq9GYuYCj/w5vGB1DhD4Lu6Y
-            4ZL2csObreySGyCKZ6lrf6DL4sFnLd97vM3Wb6VncWBY61k2qnnIAg==
-            -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-07T17:55:35Z"
-    mac: ENC[AES256_GCM,data:PcBUlNEKYAOWek8OkQCwkbpSjQJG2Tq7TiDKKs868wIT+Mi/kypJyWKD3ND5mLoG3jVpUeqRm2+KrJIiIScUhozUr9/h1OWJ1tjqVaegSu2CNS57l5CsxUUDoWHtCuZJH88hvEZcvfFYAZGT9mEvr0y5m2P+jgRs+GWFHCUpDFM=,iv:TtQdYdSFVaq9SsxVCpkoE40Us7wGonEo1/d1e2UfVw0=,tag:n+cS7nZ6mqfknejrUledZg==,type:str]
-    pgp: []
-    encrypted_regex: ^(data|stringData)$
-    version: 3.9.1
+  kms: []
+  gcp_kms: []
+  azure_kv: []
+  hc_vault: []
+  age:
+    - recipient: age1yq7xwc03yg7gp2ew9k3jehrz6ctlmuwsffypwvskvl27e26frqmqa5d7de
+      enc: |
+        -----BEGIN AGE ENCRYPTED FILE-----
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGYkdLbEMxRzRyL21VRG5i
+        STlBL2dKL0ZYdmpMcWtEM0J4NkNvWGZpeTM0CjBkWXgycTVTeHVDVVcvZ3hjY3dy
+        SDFkN2dzMFBjREV2K1BHdnEzMmZGd1kKLS0tIGZMWEYyYUFLWVhHRmhKWmZwOEx4
+        VGd1blpGY0diRC9kaENsbkVES3drek0K1MbEm4QvqwHmSVEpqNX0v3afISt7qm74
+        QJKadq5mMAqY9xmAs5qoLRdF91eGcXSwunDTGGp56ppK05ye7We9jg==
+        -----END AGE ENCRYPTED FILE-----
+  lastmodified: "2024-10-07T20:18:13Z"
+  mac: ENC[AES256_GCM,data:HrVEX4/igtec9zeLHNwMXd9cU95HLQ3boVEvKO8Ei4NrHO2b1bGZ2fEXXSsB4JjbnzyJzuKTmnDyIO5sVit9YmZ7XATaWnO34o2d6wIS89eaHAR1kVHOEAAG+G4tMUZctg0Wzharf2d2Dh5oZtIxxJgj6Mz1kaRhcz90N81r9Es=,iv:tF+jjcdDT+NB56XQYENkA+PkPu6MnCWGVY9a0pkXceQ=,tag:YHd3F+ydNdvxrgh4s8aOXA==,type:str]
+  pgp: []
+  encrypted_regex: ^(data|stringData)$
+  version: 3.9.1
