--- a/k8s/apps/flux-system/webhooks/app/github/receiver.yaml
+++ b/k8s/apps/flux-system/webhooks/app/github/receiver.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: notification.toolkit.fluxcd.io/v1
 kind: Receiver
 metadata:
@@ -13,7 +12,7 @@ spec:
   resources:
     - apiVersion: source.toolkit.fluxcd.io/v1
       kind: GitRepository
-      name: home-kubernetes
+      name: homelab
       namespace: flux-system
     - apiVersion: kustomize.toolkit.fluxcd.io/v1
       kind: Kustomization
