--- a/k8s/apps/network/external-dns/ks.yaml
+++ b/k8s/apps/network/external-dns/ks.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
@@ -13,7 +12,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: homelab
   wait: true
   interval: 30m
   timeout: 5m
