--- a/k8s/apps/network/ingress-nginx/ks.yaml
+++ b/k8s/apps/network/ingress-nginx/ks.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
@@ -15,7 +14,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: homelab
   wait: true
   interval: 30m
   timeout: 5m
@@ -36,7 +35,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: homelab
   wait: false
   interval: 30m
   timeout: 5m
@@ -57,7 +56,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: homelab
   wait: false
   interval: 30m
   timeout: 5m
