--- a/k8s/apps/observability/prometheus-operator-crds/ks.yaml
+++ b/k8s/apps/observability/prometheus-operator-crds/ks.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
@@ -13,7 +12,7 @@ spec:
   prune: false # never should be deleted
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: homelab
   wait: false
   interval: 30m
   timeout: 5m
