--- a/k8s/flux/apps.yaml
+++ b/k8s/flux/apps.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
@@ -10,7 +9,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: homelab
   decryption:
     provider: sops
     secretRef:
