--- a/k8s/flux/config/cluster.yaml
+++ b/k8s/flux/config/cluster.yaml
@@ -1,8 +1,7 @@
----
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
-  name: home-kubernetes
+  name: homelab
   namespace: flux-system
 spec:
   interval: 30m
@@ -13,7 +12,7 @@ spec:
     # exclude all
     /*
     # include kubernetes directory
-    !/kubernetes
+    !/k8s
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
@@ -27,7 +26,7 @@ spec:
   wait: false
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: homelab
   decryption:
     provider: sops
     secretRef:
