--- a/k8s/flux/repositories/helm/kustomization.yaml
+++ b/k8s/flux/repositories/helm/kustomization.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
@@ -15,3 +14,4 @@ resources:
   - ./external-dns.yaml
   - ./ingress-nginx.yaml
   - ./k8s-gateway.yaml
+  - ./tailscale.yaml
