chore: add secret

--- a/k8s/flux/config/cluster.yaml
+++ b/k8s/flux/config/cluster.yaml
@@ -6,6 +6,8 @@ metadata:
 spec:
   interval: 30m
   url: "https://github.com/solanyn/homelab.git"
+  secretRef:
+    name: github-deploy-key
   ref:
     branch: "main"
   ignore: |
