feat: add minio, cnpg, snapshot controller, volsync

--- a/k8s/flux/repositories/helm/kustomization.yaml
+++ b/k8s/flux/repositories/helm/kustomization.yaml
@@ -15,3 +15,10 @@ resources:
   - ./ingress-nginx.yaml
   - ./k8s-gateway.yaml
   - ./tailscale.yaml
+  - ./actions-runner-controller.yaml
+  - ./backube.yaml
+  - ./cloudnative-pg.yaml
+  - ./grafana.yaml
+  - ./intel.yaml
+  - ./node-feature-discovery.yaml
+  - ./piraeus.yaml
