--- a/k8s/apps/default/autobrr/ks.yaml
+++ b/k8s/apps/default/autobrr/ks.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app minio
+  name: &app autobrr
   namespace: flux-system
 spec:
   targetNamespace: default
@@ -10,8 +10,9 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
+    - name: cloudnative-pg-cluster
     - name: external-secrets-stores
-  path: ./k8s/apps/default/minio/app
+  path: ./k8s/apps/default/autobrr/app
   prune: true
   sourceRef:
     kind: GitRepository
