--- a/k8s/apps/default/echo-server/ks.yaml
+++ b/k8s/apps/default/echo-server/ks.yaml
@@ -1,15 +1,16 @@
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app echo-server
   namespace: flux-system
 spec:
-  targetNamespace: network
+  targetNamespace: default
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  path: ./k8s/apps/network/echo-server/app
-  prune: true
+  path: ./k8s/apps/default/echo-server/app
+  prune: false
   sourceRef:
     kind: GitRepository
     name: homelab
