--- a/k8s/apps/default/home-assistant/ks.yaml
+++ b/k8s/apps/default/home-assistant/ks.yaml
@@ -2,16 +2,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app minio
+  name: &app home-assistant
   namespace: flux-system
 spec:
   targetNamespace: default
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  dependsOn:
-    - name: external-secrets-stores
-  path: ./k8s/apps/default/minio/app
+  path: ./k8s/apps/default/home-assistant/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -22,3 +20,4 @@ spec:
   postBuild:
     substitute:
       APP: *app
+      VOLSYNC_CAPACITY: 5Gi
