--- a/k8s/apps/default/jellyfin/ks.yaml
+++ b/k8s/apps/default/jellyfin/ks.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app minio
+  name: &app plex
   namespace: flux-system
 spec:
   targetNamespace: default
@@ -11,7 +11,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: external-secrets-stores
-  path: ./k8s/apps/default/minio/app
+  path: ./k8s/apps/default/plex/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -22,3 +22,4 @@ spec:
   postBuild:
     substitute:
       APP: *app
+      VOLSYNC_CAPACITY: 30Gi
