--- a/k8s/apps/default/prowlarr/ks.yaml
+++ b/k8s/apps/default/prowlarr/ks.yaml
@@ -2,16 +2,17 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app minio
+  name: &app prowlarr
   namespace: flux-system
 spec:
   targetNamespace: default
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  dependsOn:
-    - name: external-secrets-stores
-  path: ./k8s/apps/default/minio/app
+  # dependsOn:
+  #   - name: cloudnative-pg-cluster
+  #   - name: external-secrets-stores
+  path: ./k8s/apps/default/prowlarr/app
   prune: true
   sourceRef:
     kind: GitRepository
