--- a/k8s/apps/network/tailscale/app/helmrelease.yaml
+++ b/k8s/apps/network/tailscale/app/helmrelease.yaml
@@ -13,6 +13,7 @@ spec:
         kind: HelmRepository
         name: tailscale
         namespace: flux-system
+      interval: 10m
   install:
     remediation:
       retries: 3
