--- a/k8s/apps/default/autobrr/app/helmrelease.yaml
+++ b/k8s/apps/default/autobrr/app/helmrelease.yaml
@@ -81,11 +81,9 @@ spec:
             port: *port
     ingress:
       app:
-        annotations:
-          external-dns.alpha.kubernetes.io/target: internal.devbu.io
-        className: internal
+        className: tailscale
         hosts:
-          - host: "{{ .Release.Name }}.devbu.io"
+          - host: autobrr
             paths:
               - path: /
                 service:
