--- a/k8s/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/k8s/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -33,11 +33,9 @@ spec:
       createPrometheusRules: true
     ingress:
       dashboard:
-        annotations:
-          external-dns.alpha.kubernetes.io/target: internal.devbu.io
-        ingressClassName: internal
+        ingressClassName: tailscale
         host:
-          name: rook.devbu.io
+          name: rook
           path: /
     toolbox:
       enabled: true
@@ -218,10 +216,9 @@ spec:
         ingress:
           enabled: true
           annotations:
-            external-dns.alpha.kubernetes.io/target: internal.devbu.io
             nginx.ingress.kubernetes.io/proxy-body-size: "0"
             nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
-          ingressClassName: internal
+          ingressClassName: tailscale
           host:
-            name: rgw.devbu.io
+            name: rgw
             path: /
