--- a/k8s/apps/network/tailscale/ks.yaml
+++ b/k8s/apps/network/tailscale/ks.yaml
@@ -13,6 +13,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: homelab
-  wait: true
+    namespace: flux-system
+  wait: false
   interval: 30m
   timeout: 5m
