fix: add configuration field

--- a/k8s/apps/network/tailscale/app/kustomization.yaml
+++ b/k8s/apps/network/tailscale/app/kustomization.yaml
@@ -7,3 +7,5 @@ secretGenerator:
     namespace: tailscale
     files:
       - values.yaml=values.sops.yaml
+configurations:
+  - kustomizeconfig.yaml
