--- a/k8s/apps/kube-system/kustomization.yaml
+++ b/k8s/apps/kube-system/kustomization.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
@@ -9,3 +8,5 @@ resources:
   - ./reloader/ks.yaml
   - ./kubelet-csr-approver/ks.yaml
   - ./spegel/ks.yaml
+  - ./node-feature-discovery/ks.yaml
+  - ./intel-device-plugin/ks.yaml
