--- a/k8s/apps/network/tailscale/ks.yaml
+++ b/k8s/apps/network/tailscale/ks.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app tailscale
+  namespace: flux-system
 spec:
   targetNamespace: tailscale
   commonMetadata:
