feat: add tailscale ingress

--- a/k8s/apps/default/adguard/app/helmrelease.yaml
+++ b/k8s/apps/default/adguard/app/helmrelease.yaml
@@ -79,6 +79,9 @@ spec:
                 service:
                   identifier: app
                   port: http
+        tls:
+          - hosts:
+              - adguard
     persistence:
       tmp:
         type: emptyDir
