feat: add tailscale

--- a/k8s/apps/default/audiobookshelf/app/helmrelease.yaml
+++ b/k8s/apps/default/audiobookshelf/app/helmrelease.yaml
@@ -69,12 +69,15 @@ spec:
       app:
         className: tailscale
         hosts:
-          - host: audiobookshelf
+          - host: books
             paths:
               - path: /
                 service:
                   identifier: app
                   port: http
+        tls:
+          - hosts:
+              - books
     persistence:
       media:
         type: nfs
