--- a/k8s/apps/external-secrets/external-secrets/stores/clustersecretstore.yaml
+++ b/k8s/apps/external-secrets/external-secrets/stores/clustersecretstore.yaml
@@ -8,7 +8,7 @@ spec:
     onepassword:
       connectHost: http://onepassword-connect.external-secrets.svc.cluster.local
       vaults:
-        Kubernetes: 1
+        homelab: 1
       auth:
         secretRef:
           connectTokenSecretRef:
