--- a/k8s/apps/default/prowlarr/ks.yaml
+++ b/k8s/apps/default/prowlarr/ks.yaml
@@ -9,9 +9,9 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  # dependsOn:
-  #   - name: cloudnative-pg-cluster
-  #   - name: external-secrets-stores
+  dependsOn:
+    - name: cloudnative-pg-cluster
+    - name: external-secrets-stores
   path: ./k8s/apps/default/prowlarr/app
   prune: true
   sourceRef:
