--- a/k8s/apps/default/minio/app/helmrelease.yaml
+++ b/k8s/apps/default/minio/app/helmrelease.yaml
@@ -112,7 +112,7 @@ spec:
     persistence:
       config:
         type: nfs
-        server: n0.local
+        server: 192.168.68.10
         path: /mnt/nfs/backups
         globalMounts:
           - path: /data
