--- a/k8s/apps/default/audiobookshelf/app/helmrelease.yaml
+++ b/k8s/apps/default/audiobookshelf/app/helmrelease.yaml
@@ -81,7 +81,7 @@ spec:
     persistence:
       media:
         type: nfs
-        server: n0.local
+        server: 192.168.68.10
         path: /mnt/nfs/media
         globalMounts:
           - path: /media
