--- a/k8s/apps/default/jellyfin/app/helmrelease.yaml
+++ b/k8s/apps/default/jellyfin/app/helmrelease.yaml
@@ -120,7 +120,7 @@ spec:
         type: emptyDir
       media:
         type: nfs
-        server: n0.local
+        server: 192.168.68.10
         path: /mnt/nfs/media
         globalMounts:
           - path: /media
