--- a/k8s/apps/default/qbittorrent/app/helmrelease.yaml
+++ b/k8s/apps/default/qbittorrent/app/helmrelease.yaml
@@ -108,7 +108,7 @@ spec:
         existingClaim: qbittorrent
       media:
         type: nfs
-        server: n0.local
+        server: 192.168.68.10
         path: /mnt/nfs
         globalMounts:
           - path: /data
