--- a/k8s/apps/default/stash/app/helmrelease.yaml
+++ b/k8s/apps/default/stash/app/helmrelease.yaml
@@ -107,7 +107,7 @@ spec:
         type: emptyDir
       media:
         type: nfs
-        server: n0.local
+        server: 192.168.68.10
         path: /mnt/nfs
         globalMounts:
           - path: /data
