fix: limit cpu resources

--- a/k8s/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
+++ b/k8s/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
@@ -26,6 +26,13 @@ spec:
     - name: snapshot-controller
       namespace: volsync-system
   values:
+    resources:
+      requests:
+        cpu: 50m
+    discover:
+      resources:
+        requests:
+          cpu: 50m
     csi:
       cephFSKernelMountOptions: ms_mode=prefer-crc
       enableLiveness: true
