--- a/k8s/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
+++ b/k8s/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
@@ -26,9 +26,6 @@ spec:
     - name: snapshot-controller
       namespace: volsync-system
   values:
-    resources:
-      requests:
-        cpu: 50m
     discover:
       resources:
         requests:
@@ -42,6 +39,6 @@ spec:
       enabled: true
     resources:
       requests:
-        memory: 128Mi # unchangable
-        cpu: 100m # unchangable
+        memory: 128Mi
+        cpu: 50m
       limits: {}
