--- a/k8s/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/k8s/apps/kube-system/cilium/app/helmrelease.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -52,8 +51,11 @@ spec:
         rollOutPods: true
         ingress:
           enabled: true
-          className: internal
-          hosts: ["hubble.${SECRET_DOMAIN}"]
+          className: tailscale
+          hosts: ["hubble"]
+          tls:
+            - hosts:
+                - hubble
     operator:
       prometheus:
         enabled: true
