feat: byebye rook/ceph :(

--- a/k8s/apps/default/jellyseerr/app/pvc.yaml
+++ b/k8s/apps/default/jellyseerr/app/pvc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: overseerr-cache
+  name: jellyseerr-cache
 spec:
   accessModes: ["ReadWriteOnce"]
   resources:
     requests:
       storage: 15Gi
-  storageClassName: ceph-block
+  # storageClassName: ceph-block
