--- a/k8s/apps/default/jellyfin/app/pvc.yaml
+++ b/k8s/apps/default/jellyfin/app/pvc.yaml
@@ -1,10 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: plex-cache
+  name: jellyfin-cache
 spec:
   accessModes: ["ReadWriteOnce"]
   resources:
     requests:
       storage: 75Gi
-  storageClassName: ceph-block
+  # storageClassName: ceph-block
+  storageClassName: openebs-hostpath
