--- a/.github/labeler.yaml
+++ b/.github/labeler.yaml
@@ -1,4 +1,3 @@
----
 area/bootstrap:
   - changed-files:
       - any-glob-to-any-file: bootstrap/**/*
@@ -7,7 +6,7 @@ area/github:
       - any-glob-to-any-file: .github/**/*
 area/kubernetes:
   - changed-files:
-      - any-glob-to-any-file: kubernetes/**/*
+      - any-glob-to-any-file: k8s/**/*
 area/taskfile:
   - changed-files:
       - any-glob-to-any-file: .taskfiles/**/*
