--- a/.github/workflows/kubeconform.yaml
+++ b/.github/workflows/kubeconform.yaml
@@ -1,15 +1,11 @@
----
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 name: "Kubeconform"
-
 on:
   pull_request:
     branches: ["main"]
-    paths: ["kubernetes/**"]
-
+    paths: ["k8s/**"]
 env:
   KUBERNETES_DIR: ./kubernetes
-
 jobs:
   kubeconform:
     name: Kubeconform
@@ -17,13 +13,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Setup Homebrew
         uses: Homebrew/actions/setup-homebrew@master
-
       - name: Setup Workflow Tools
         run: brew install fluxcd/tap/flux kubeconform kustomize
-
       - name: Run kubeconform
         shell: bash
         run: bash ./scripts/kubeconform.sh ${{ env.KUBERNETES_DIR }}
