fix: bring cluster back up

--- a/k8s/flux/vars/cluster-secrets.sops.yaml
+++ b/k8s/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
   name: cluster-secrets
   namespace: flux-system
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:FBQy0CtfqoIR0L4=,iv:x6Qb7XUpR0gVR5pWIZk/Q9/i5AWQJ8+YmgTvwVEOEWM=,tag:MKQEv6KPVAcApOLxbKhWXw==,type:str]
-  SECRET_ACME_EMAIL: ENC[AES256_GCM,data:BfRaglbUICv8o+ppGaM+LdeQZa/28nuC,iv:NmAiD4PnNz9lx5JQ+YLwRMYDO9x/WAxwydQX3w1QOWU=,tag:XQeUtTRiz3qCXyZW9b6N4Q==,type:str]
-  SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:+xFym3zkV76wtFoJADTKCSdPpx06O060vhTKAGyrNzjj+kVF,iv:MY8KdYTzbPgOtjHUsnVOFVY/sqxI42khyWUbB2SCfgc=,tag:QENiSY7SbexIR5GNhri7+g==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:Uw68JTb9RUYJEd8=,iv:ZO4tcOH1A4rRPnwnL112IkSv3FYkz+H6DqSuafagZAU=,tag:KxVqgmTwJcPcKPn5yFPqMg==,type:str]
+  SECRET_ACME_EMAIL: ENC[AES256_GCM,data:Qfv1p8o5twLdzHT+8+8UXKAuyS+dL2sE,iv:Tgi1hX8A2j8/KBRjqfkLGso45lc6cLFQWkkHsi/mbyo=,tag:IuawvA3Q7EW1PHmefG2feQ==,type:str]
+  SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:UH8Zd8RehvtvhLEsc0ztjoKfZInfHuj2FQ9qCTyQQ/jEvRg1,iv:CMRGWCGdTWNogkVn65htZdacztouvmf6kk5CjQAhpr0=,tag:NQ+4NYnIYu25iLX4RLXl8A==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -16,14 +16,14 @@ sops:
     - recipient: age1yq7xwc03yg7gp2ew9k3jehrz6ctlmuwsffypwvskvl27e26frqmqa5d7de
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGYkdLbEMxRzRyL21VRG5i
-        STlBL2dKL0ZYdmpMcWtEM0J4NkNvWGZpeTM0CjBkWXgycTVTeHVDVVcvZ3hjY3dy
-        SDFkN2dzMFBjREV2K1BHdnEzMmZGd1kKLS0tIGZMWEYyYUFLWVhHRmhKWmZwOEx4
-        VGd1blpGY0diRC9kaENsbkVES3drek0K1MbEm4QvqwHmSVEpqNX0v3afISt7qm74
-        QJKadq5mMAqY9xmAs5qoLRdF91eGcXSwunDTGGp56ppK05ye7We9jg==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEUnk0Sy95OUFMZWx6OTJQ
+        aWhGRDdkdCtiTVJMNmJRYkdjRCtjOXpGeWtjCjNBMDVPR25VcmkyT29lYjRPOUFk
+        QWtYYXg2SEdXNlM5SFlpUWlXUDd4V0UKLS0tIEJxS3liUG1ibkRXUU5JbVlUcWlJ
+        TUxaMmdGTG1aYnpCV1B4YUJYcXpSSVEKMaZpkG/g1wfL8dToAsQX1incsUAdEt45
+        +lFiutclUGGqSbH9V292E97eiezGm/+y0olVN8Mr4gxxWB1ReY1tzQ==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2024-10-07T20:18:13Z"
-  mac: ENC[AES256_GCM,data:HrVEX4/igtec9zeLHNwMXd9cU95HLQ3boVEvKO8Ei4NrHO2b1bGZ2fEXXSsB4JjbnzyJzuKTmnDyIO5sVit9YmZ7XATaWnO34o2d6wIS89eaHAR1kVHOEAAG+G4tMUZctg0Wzharf2d2Dh5oZtIxxJgj6Mz1kaRhcz90N81r9Es=,iv:tF+jjcdDT+NB56XQYENkA+PkPu6MnCWGVY9a0pkXceQ=,tag:YHd3F+ydNdvxrgh4s8aOXA==,type:str]
+  lastmodified: "2024-10-09T18:23:11Z"
+  mac: ENC[AES256_GCM,data:yw+TcIX9tE0CKRVZB2Hqd6R8oh1KxNhA800jVVq3hYZ79c9xwYKK7sv+wQAcTAotLOMmCtgWWENALx0aoa4oZtFPoCyVdefvAUAnDcBXdmLAZ2FS7uYu0scy4IIhONVGTiDIReE2/DNUTQS2uu8dcBSuR3kkTX//wmN36TsPpGs=,iv:6qd56YQlCyEaXaE35ybe9z0t3mIy9iElHF8PSdjT1e4=,tag:+iCi8+QSLlfY+WT1iHI2dQ==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   version: 3.9.1
