--- a/k8s/flux/config/cluster.yaml
+++ b/k8s/flux/config/cluster.yaml
@@ -6,15 +6,13 @@ metadata:
 spec:
   interval: 30m
   url: "https://github.com/solanyn/homelab.git"
-  secretRef:
-    name: github-deploy-key
   ref:
     branch: "main"
   ignore: |
     # exclude all
     /*
     # include kubernetes directory
-    !/k8s
+    !/kubernetes
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
