--- a/k8s/apps/default/readarr/app/pvc.yaml
+++ b/k8s/apps/default/readarr/app/pvc.yaml
@@ -7,4 +7,5 @@ spec:
   resources:
     requests:
       storage: 15Gi
-  storageClassName: ceph-filesystem
+  # storageClassName: ceph-filesystem
+  storageClassName: openebs-hostpath
