feat: hello ceph-rook :)

--- a/k8s/apps/default/jellyfin/app/pvc.yaml
+++ b/k8s/apps/default/jellyfin/app/pvc.yaml
@@ -7,5 +7,4 @@ spec:
   resources:
     requests:
       storage: 75Gi
-  # storageClassName: ceph-block
-  storageClassName: openebs-hostpath
+  storageClassName: ceph-block
