--- a/k8s/apps/default/qbittorrent/ks.yaml
+++ b/k8s/apps/default/qbittorrent/ks.yaml
@@ -25,7 +25,5 @@ spec:
       GATUS_SUBDOMAIN: qb
       VOLSYNC_CAPACITY: 2Gi
       VOLSYNC_ACCESSMODES: ReadWriteMany
-      # VOLSYNC_STORAGECLASS: ceph-filesystem
-      VOLSYNC_STORAGECLASS: openebs-hostpath
-      # VOLSYNC_SNAPSHOTCLASS: csi-ceph-filesystem
-      VOLSYNC_SNAPSHOTCLASS: openebs-hostpath
+      VOLSYNC_STORAGECLASS: ceph-filesystem
+      VOLSYNC_SNAPSHOTCLASS: csi-ceph-filesystem
