--- a/k8s/apps/default/stash/app/pvc.yaml
+++ b/k8s/apps/default/stash/app/pvc.yaml
@@ -7,5 +7,4 @@ spec:
   resources:
     requests:
       storage: 15Gi
-  # storageClassName: ceph-filesystem
-  storageClassName: openebs-hostpath
+  storageClassName: ceph-filesystem
