--- a/k8s/templates/volsync/claim.yaml
+++ b/k8s/templates/volsync/claim.yaml
@@ -11,5 +11,4 @@ spec:
   resources:
     requests:
       storage: "${VOLSYNC_CAPACITY}"
-  # storageClassName: "${VOLSYNC_STORAGECLASS:-ceph-block}"
-  storageClassName: "${VOLSYNC_STORAGECLASS:-openebs-hostpath}"
+  storageClassName: "${VOLSYNC_STORAGECLASS:-ceph-block}"
