feat: remove cnpg for now

--- a/k8s/apps/default/autobrr/app/helmrelease.yaml
+++ b/k8s/apps/default/autobrr/app/helmrelease.yaml
@@ -26,14 +26,14 @@ spec:
       autobrr:
         annotations:
           reloader.stakater.com/auto: "true"
-        initContainers:
-          init-db:
-            image:
-              repository: ghcr.io/onedr0p/postgres-init
-              tag: 16
-            envFrom: &envFrom
-              - secretRef:
-                  name: autobrr-secret
+        # initContainers:
+        #   init-db:
+        #     image:
+        #       repository: ghcr.io/onedr0p/postgres-init
+        #       tag: 16
+        #     envFrom: &envFrom
+        #       - secretRef:
+        #           name: autobrr-secret
         containers:
           app:
             image:
