feat: cleanup taskfiles, add more bootstrap tasks

--- a/k8s/apps/default/kopia/app/externalsecret.yaml
+++ b/k8s/apps/default/kopia/app/externalsecret.yaml
@@ -37,7 +37,7 @@ spec:
             "storage": {
               "type": "s3",
               "config": {
-                "bucket": "expanse",
+                "bucket": "solanyn-lab-backups",
                 "endpoint": "s3.us-east-005.backblazeb2.com",
                 "accessKeyID": "{{ .AWS_ACCESS_KEY_ID }}",
                 "secretAccessKey": "{{ .AWS_SECRET_ACCESS_KEY }}"
@@ -49,12 +49,12 @@ spec:
               "maxMetadataCacheSize": 5242880000,
               "maxListCacheDuration": 30
             },
-            "hostname": "expanse.internal",
-            "username": "devin",
-            "description": "expanse",
+            "hostname": "s3.solanyn.dev",
+            "username": "solanyn",
+            "description": "internal",
             "enableActions": false,
             "formatBlobCacheDuration": 900000000000
           }
   dataFrom:
     - extract:
-        key: cloudflare
+        key: backblaze
