--- a/k8s/apps/observability/kube-prometheus-stack/app/externalsecret.yaml
+++ b/k8s/apps/observability/kube-prometheus-stack/app/externalsecret.yaml
@@ -13,7 +13,6 @@ spec:
     template:
       engineVersion: v2
       data:
-        # Yo dawg I heard you like go templating so I put go templates in your go templates
         alertmanager.yaml: |
           global:
             resolve_timeout: 5m
@@ -21,7 +20,7 @@ spec:
             group_by: ["alertname", "job"]
             group_interval: 10m
             group_wait: 1m
-            receiver: pushover
+            receiver: discord
             repeat_interval: 12h
             routes:
               - receiver: heartbeat
@@ -33,7 +32,7 @@ spec:
               - receiver: "null"
                 matchers:
                   - alertname =~ "InfoInhibitor"
-              - receiver: pushover
+              - receiver: discord
                 continue: true
                 matchers:
                   - severity = "critical"
@@ -49,28 +48,9 @@ spec:
                 - send_resolved: true
                   url: "{{ .ALERTMANAGER_CLUSTER_MAIN_HEARTBEAT_URL }}"
             - name: "null"
-            - name: pushover
-              pushover_configs:
-                - html: true
-                  message: |-
-                    {{ "{{-" }} range .Alerts {{ "}}" }}
-                      {{ "{{-" }} if ne .Annotations.description "" {{ "}}" }}
-                        {{ "{{" }} .Annotations.description {{ "}}" }}
-                      {{ "{{-" }} else if ne .Annotations.summary "" {{ "}}" }}
-                        {{ "{{" }} .Annotations.summary {{ "}}" }}
-                      {{ "{{-" }} else if ne .Annotations.message "" {{ "}}" }}
-                        {{ "{{" }} .Annotations.message {{ "}}" }}
-                      {{ "{{-" }} else {{ "}}" }}
-                        Alert description not available
-                      {{ "{{-" }} end {{ "}}" }}
-                      {{ "{{-" }} if gt (len .Labels.SortedPairs) 0 {{ "}}" }}
-                        <small>
-                        {{ "{{-" }} range .Labels.SortedPairs {{ "}}" }}
-                          <b>{{ "{{" }} .Name {{ "}}" }}:</b> {{ "{{" }} .Value {{ "}}" }}
-                        {{ "{{-" }} end {{ "}}" }}
-                        </small>
-                      {{ "{{-" }} end {{ "}}" }}
-                    {{ "{{-" }} end {{ "}}" }}
+            - name: discord
+              discord_configs:
+              - webhook_url: "{{ .DISCORD_WEBHOOK_URL }}"
                   priority: |-
                     {{ "{{" }} if eq .Status "firing" {{ "}}" }}1{{ "{{" }} else {{ "}}" }}0{{ "{{" }} end {{ "}}" }}
                   send_resolved: true
@@ -79,11 +59,7 @@ spec:
                   title: >-
                     [{{ "{{" }} .Status | toUpper {{ "}}" }}{{ "{{" }} if eq .Status "firing" {{ "}}" }}:{{ "{{" }} .Alerts.Firing | len {{ "}}" }}{{ "{{" }} end {{ "}}" }}]
                     {{ "{{" }} .CommonLabels.alertname {{ "}}" }}
-                  token: "{{ .ALERTMANAGER_PUSHOVER_TOKEN }}"
                   url_title: View in Alertmanager
-                  user_key: "{{ .PUSHOVER_USER_KEY }}"
   dataFrom:
-    - extract:
-        key: pushover
     - extract:
         key: alertmanager
