--- a/k8s/apps/default/readarr/app/externalsecret.yaml
+++ b/k8s/apps/default/readarr/app/externalsecret.yaml
@@ -2,22 +2,22 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: radarr
+  name: readarr
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword-connect
   target:
-    name: radarr-secret
+    name: readarr-secret
     template:
       engineVersion: v2
       data:
-        RADARR__AUTH__APIKEY: "{{ .RADARR_API_KEY }}"
-        RADARR__POSTGRES__HOST: &dbHost postgres16-rw.database.svc.cluster.local
-        RADARR__POSTGRES__PORT: "5432"
-        RADARR__POSTGRES__USER: &dbUser "{{ .RADARR_POSTGRES_USER }}"
-        RADARR__POSTGRES__PASSWORD: &dbPass "{{ .RADARR_POSTGRES_PASSWORD }}"
-        RADARR__POSTGRES__MAINDB: &dbName radarr_main
+        READARR__AUTH__APIKEY: "{{ .READARR_API_KEY }}"
+        READARR__POSTGRES__HOST: &dbHost postgres16-rw.database.svc.cluster.local
+        READARR__POSTGRES__PORT: "5432"
+        READARR__POSTGRES__USER: &dbUser "{{ .READARR_POSTGRES_USER }}"
+        READARR__POSTGRES__PASSWORD: &dbPass "{{ .READARR_POSTGRES_PASSWORD }}"
+        READARR__POSTGRES__MAINDB: &dbName readarr_main
         INIT_POSTGRES_DBNAME: *dbName
         INIT_POSTGRES_HOST: *dbHost
         INIT_POSTGRES_USER: *dbUser
@@ -27,4 +27,4 @@ spec:
     - extract:
         key: cloudnative-pg
     - extract:
-        key: radarr
+        key: readarr
